--- a/PI/settings.html
+++ b/PI/settings.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="../PI/start.html">Start</a>
         </li>
       </ul>
-        <button type="button" class="btn btn-outline-dark me-3" class="login" onclick="window.location.href='../PI/cadastro.html'">Cadastre-se</button>
+        <button type="button" class="btn btn-outline-dark me-3" class="login" onclick="window.location.href='../PI/cadastro.html'">Sign up</button>
         <button class="btn btn-outline-success px-4" class="login" type="submit"  onclick="window.location.href='../PI/login.html'">Login</button>
     </div>
   </div>
