--- a/PI/character.html
+++ b/PI/character.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../PI/charac.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     
     <title>Characters</title>
 </head>
@@ -33,7 +32,7 @@
           <a class="nav-link" href="../PI/start.html">Start</a>
         </li>
       </ul>
-        <button type="button" class="btn btn-outline-dark me-3" class="login" onclick="window.location.href='../PI/cadastro.html'">Cadastre-se</button>
+        <button type="button" class="btn btn-outline-dark me-3" class="login" onclick="window.location.href='../PI/cadastro.html'">Sign up</button>
         <button class="btn btn-outline-success px-4" class="login" type="submit" onclick="window.location.href='../PI/login.html'">Login</button>
     </div>
   </div>
