--- a/PI/index.html
+++ b/PI/index.html
@@ -12,14 +12,17 @@
 <div class="d-grid gap-2">
   <button id="start" class="butao" type="button" onclick="window.location.href='../PI/start.html'">START</button>
 </div>
-<div class="d-grid gap-2">
+<div class="d-grid gap-2 inter">
   <button class="button"  type="button" onclick="window.location.href='../PI/character.html'">CHARACTERS</button>
 </div>
-<div class="d-grid gap-2">
+<div class="d-grid gap-2 inter">
+  <button class="button" type="button" onclick="window.location.href='../PI/commun.html'">COMMUNITY</button>
+</div>
+<div class="d-grid gap-2 inter">
   <button class="button" type="button" onclick="window.location.href='../PI/settings.html'">SETTINGS</button>
 </div>
-<div class="d-grid gap-2">
-  <button class="button" type="button" onclick="window.location.href='../PI/about.html'">ABOUT</button>
+<div class="d-grid gap-2 inter">
+  <button class="button but" type="button" onclick="window.location.href='../PI/about.html'">ABOUT US</button>
 </div>
 </div>
 </div> 
