--- a/PI/login.html
+++ b/PI/login.html
@@ -30,12 +30,16 @@
       </div>
 
       <button class="batao" class="btn btn-primary w-100 py-2" type="submit">
-        Sign in
+        Sign In
       </button>
-
+      <div class="text-center">
       <p class="copyright mt-4">
         ALL RIGHTS RESERVES TM ©
       </p>
+      <h6 class="copyright mt-4">
+      Create an account <a href="../PI/cadastro.html" class="text-primary">HERE</a>
+      </h6>
+      </div>
     </form>
   </div>
 
