--- a/PI/about.html
+++ b/PI/about.html
@@ -9,8 +9,9 @@
     <title>About</title>
 </head>
 <body>
-    <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <header>
+      <div id="nav">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" class="nav">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">RPI</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,24 +20,124 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../PI/index.html">Home</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link" href="../PI/character.html">Characters</a>
-        </li>
-    <li class="nav-item">
-          <a class="nav-link" href="../PI/settings.html">Settings</a>
+          <a class="nav-link" aria-current="page" href="../PI/index.html">Home</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="../PI/start.html">Start</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../PI/character.html">Characters</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../PI/commun.html">Community</a>
+        </li>
+    <li class="nav-item">
+          <a class="nav-link" href="../PI/settings.html">Settings</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="../PI/about.html">About Us</a>
+        </li>
       </ul>
         <button type="button" class="btn btn-outline-dark me-3" class="login" onclick="window.location.href='../PI/cadastro.html'">Sign up</button>
-        <button class="btn btn-outline-success px-4" class="login" type="submit"  onclick="window.location.href='../PI/login.html'">Login</button>
+        <button class="btn btn-outline-success px-4" class="login" type="submit" onclick="window.location.href='../PI/login.html'">Login</button>
     </div>
   </div>
 </nav>
+</div>
     </header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - Bootstrap 5</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .hero {
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+                        url('https://via.placeholder.com/1920x500') center/cover no-repeat;
+            color: white;
+            padding: 100px 0;
+            text-align: center;
+        }
+        .team-member img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+        }
+    </style>
+</head>
+<!-- Hero Section -->
+<section class="hero">
+    <div class="container">
+        <h1 class="display-4 fw-bold">About Us</h1>
+        <p class="lead">We are passionate about delivering quality and innovation.</p>
+    </div>
+</section>
+
+<!-- About Section -->
+<section class="py-5">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <img src="../PI/gurizes.jpeg" alt="About Image" class="img-fluid rounded shadow">
+            </div>
+            <div class="col-md-6">
+                <h2>Who We Are</h2>
+                <p>
+                    Our company is dedicated to providing top-notch services and solutions
+                    that empower businesses to thrive in the digital age. We believe in
+                    innovation, collaboration, and excellence.
+                </p>
+                <p>
+                    With a team of skilled professionals, we tackle challenges head-on
+                    and deliver results that exceed expectations.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Team Section -->
+<section class="bg-light py-5">
+    <div class="container">
+        <h2 class="text-center mb-5">Meet Our Team</h2>
+        <div class="row g-4">
+            <div class="col-md-3 text-center team-member">
+                <img src="../PI/papick.jpeg" alt="Team Member" class="mb-3">
+                <h5>papick</h5>
+                <p class="text-muted">CEO & Founder</p>
+            </div>
+            <div class="col-md-3 text-center team-member">
+                <img src="../PI/gugstavio.jpeg" alt="Team Member" class="mb-3">
+                <h5>Gustávio</h5>
+                <p class="text-muted">Lead Developer</p>
+            </div>
+            <div class="col-md-3 text-center team-member">
+                <img src="../PI/dimitri.jpeg" alt="Team Member" class="mb-3">
+                <h5>Dímitri</h5>
+                <p class="text-muted">Marketing Manager</p>
+            </div>
+            <div class="col-md-3 text-center team-member">
+                <img src="../PI/samusca.jpeg" alt="Team Member" class="mb-3">
+                <h5>Samusca</h5>
+                <p class="text-muted"> Executive Manager</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-dark text-white text-center py-3">
+    <p class="mb-0">&copy; 2026 Your Company. All rights reserved.</p>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 
     
 </body>
