--- a/PI/cadastro.html
+++ b/PI/cadastro.html
@@ -30,12 +30,16 @@
       </div>
 
       <button class="batao" class="btn btn-primary w-100 py-2" type="submit">
-        Sign in
+        Sign Up
       </button>
-
+      <div class="text-center">
       <p class="copyright mt-4">
-         ALL RIGHTS RESERVES TM ©
+        ALL RIGHTS RESERVES TM ©
       </p>
+      <h6 class="copyright mt-4">
+        Already have an account <a href="../PI/login.html" class="text-primary">HERE</a>
+      </h6>
+      </div>
     </form>
   </div>
 
