--- a/PI/character.html
+++ b/PI/character.html
@@ -20,16 +20,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../PI/index.html">Home</a>
+          <a class="nav-link" aria-current="page" href="../PI/index.html">Home</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../PI/start.html">Start</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../PI/character.html">Characters</a>
+          <a class="nav-link active " href="../PI/character.html">Characters</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../PI/commun.html">Community</a>
         </li>
     <li class="nav-item">
           <a class="nav-link" href="../PI/settings.html">Settings</a>
         </li>
-         <li class="nav-item">
-          <a class="nav-link" href="../PI/start.html">Start</a>
+        <li class="nav-item">
+          <a class="nav-link" href="../PI/about.html">About Us</a>
         </li>
       </ul>
         <button type="button" class="btn btn-outline-dark me-3" class="login" onclick="window.location.href='../PI/cadastro.html'">Sign up</button>
@@ -43,6 +49,7 @@
     <br>
     <hr style="border: none; height: 2px; background-color: black; width: 85%; opacity: 30%; margin-left: 7.5%;">
     <h3 class="empty">EMPTY</h3>
+    
 </body>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </html>
