--- a/PI/create.html
+++ b/PI/create.html
@@ -10,45 +10,42 @@
 
 <body>
 
-<header>
-<div id="nav">
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <header>
+      <div id="nav">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" class="nav">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">RPI</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="../PI/index.html">Home</a>
+          <a class="nav-link" aria-current="page" href="../PI/index.html">Home</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../PI/start.html">Start</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../PI/character.html">Characters</a>
+          <a class="nav-link active" href="../PI/character.html">Characters</a>
         </li>
-        <li class="nav-item">
+         <li class="nav-item">
+          <a class="nav-link" href="../PI/commun.html">Community</a>
+        </li>
+    <li class="nav-item">
           <a class="nav-link" href="../PI/settings.html">Settings</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../PI/start.html">Start</a>
+          <a class="nav-link" href="../PI/about.html">About Us</a>
         </li>
       </ul>
-
-      <button type="button" class="btn btn-outline-dark me-3"
-        onclick="window.location.href='../PI/cadastro.html'">
-        Sign up
-      </button>
-
-      <button class="btn btn-outline-success px-4"
-        onclick="window.location.href='../PI/login.html'">
-        Login
-      </button>
-
+        <button type="button" class="btn btn-outline-dark me-3" class="login" onclick="window.location.href='../PI/cadastro.html'">Sign up</button>
+        <button class="btn btn-outline-success px-4" class="login" type="submit" onclick="window.location.href='../PI/login.html'">Login</button>
     </div>
   </div>
 </nav>
 </div>
-</header>
+    </header>
 
 <br>
 
@@ -63,7 +60,7 @@
         <div class="info-flex">
 
             <!-- ESQUERDA -->
-            <div class="info-left">
+            <div class="info-left infos">
                 <label>Nome do Personagem</label>
                 <input type="text" required>
 
@@ -90,31 +87,33 @@
 
     <!-- ATRIBUTOS -->
     <fieldset class="mb-4">
+      <div class="atributos">
         <legend class="title">Atributos</legend>
+        <br>
 
-        <div class="atributos">
+        
             <label>Força</label>
-            <input type="number" min="1" max="20" required>
+            <input type="number" min="1" max="5" required>
 
             <label>Destreza</label>
-            <input type="number" min="1" max="20" required>
+            <input type="number" min="1" max="5" required>
 
             <label>Constituição</label>
-            <input type="number" min="1" max="20" required>
+            <input type="number" min="1" max="5" required>
 
             <label>Inteligência</label>
-            <input type="number" min="1" max="20" required>
+            <input type="number" min="1" max="5" required>
 
             <label>Sabedoria</label>
-            <input type="number" min="1" max="20" required>
+            <input type="number" min="1" max="5" required>
 
             <label>Carisma</label>
-            <input type="number" min="1" max="20" required>
+            <input type="number" min="1" max="5" required>
         </div>
     </fieldset>
 
     <div class="text-center">
-        <button id="sub" type="submit" class="btn btn-primary">
+        <button id="sub" type="submit" class="btn-primary save">
             Salvar Personagem
         </button>
     </div>
