--- a/PI/settings.html
+++ b/PI/settings.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div id="nav">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" class="nav">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">RPI</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,29 +21,138 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../PI/index.html">Home</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link" href="../PI/character.html">Characters</a>
-        </li>
-    <li class="nav-item">
-          <a class="nav-link" href="../PI/settings.html">Settings</a>
+          <a class="nav-link" aria-current="page" href="../PI/index.html">Home</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="../PI/start.html">Start</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../PI/character.html">Characters</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../PI/commun.html">Community</a>
+        </li>
+    <li class="nav-item">
+          <a class="nav-link active" href="../PI/settings.html">Settings</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../PI/about.html">About Us</a>
+        </li>
       </ul>
         <button type="button" class="btn btn-outline-dark me-3" class="login" onclick="window.location.href='../PI/cadastro.html'">Sign up</button>
-        <button class="btn btn-outline-success px-4" class="login" type="submit"  onclick="window.location.href='../PI/login.html'">Login</button>
+        <button class="btn btn-outline-success px-4" class="login" type="submit" onclick="window.location.href='../PI/login.html'">Login</button>
     </div>
   </div>
 </nav>
+</div>
     </header>
 
     <h1 id="title"> Account Settings</h1>
     <br>
     <hr style="border: none; height: 2px; background-color: black; width: 85%; opacity: 30%; margin-left: 7.5%;">
-    
+    <br>
+    <div class="container py-5">
+    <h2 class="mb-4">User Settings</h2>
+    <form>
+        <div class="row mb-4">
+            <div class="col-md-6">
+                <h4>Personal Information</h4>
+                <div class="mb-3">
+                    <label for="fullName" class="form-label">Full Name</label>
+                    <input type="text" class="form-control" id="fullName" value="">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" value="">
+                </div>
+                <div class="mb-3">
+                    <label for="phone" class="form-label">Phone Number</label>
+                    <input type="tel" class="form-control" id="phone" value="">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h4>Profile Picture</h4>
+                <div class="mb-3">
+                    <img src="../PI/mike.jpg" alt="Profile Picture" class="img-thumbnail mb-2">
+                    <input class="form-control" type="file" id="profilePicture">
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row mb-4">
+            <div class="col-md-6">
+                <h4>Email Preferences</h4>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="newsletterCheck" checked>
+                    <label class="form-check-label" for="newsletterCheck">Receive newsletter</label>
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="promotionsCheck">
+                    <label class="form-check-label" for="promotionsCheck">Receive promotional emails</label>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h4>Account Settings</h4>
+                <div class="mb-3">
+                    <label for="language" class="form-label">Preferred Language</label>
+                    <select class="form-select" id="language">
+                            <option value="en">English</option>
+                            <option value="es">Español</option>
+                            <option value="fr">Français</option>
+                            <option value="de">Deutsch</option>
+                        </select>
+                </div>
+                <div class="mb-3">
+                    <label for="timezone" class="form-label">Time Zone</label>
+                    <select class="form-select" id="timezone">
+                            <option value="UTC-8">Pacific Time (PT)</option>
+                            <option value="UTC-5">Eastern Time (ET)</option>
+                            <option value="UTC+0">Coordinated Universal Time (UTC)</option>
+                            <option value="UTC+1">Central European Time (CET)</option>
+                        </select>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row mb-4">
+            <div class="col-md-6">
+                <h4>Change Password</h4>
+                <div class="mb-3">
+                    <label for="currentPassword" class="form-label">Current Password</label>
+                    <input type="password" class="form-control" id="currentPassword">
+                </div>
+                <div class="mb-3">
+                    <label for="newPassword" class="form-label">New Password</label>
+                    <input type="password" class="form-control" id="newPassword">
+                </div>
+                <div class="mb-3">
+                    <label for="confirmPassword" class="form-label">Confirm New Password</label>
+                    <input type="password" class="form-control" id="confirmPassword">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h4>Privacy Settings</h4>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="profileVisibilityCheck" checked>
+                    <label class="form-check-label" for="profileVisibilityCheck">Make profile visible to others</label>
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="activityTrackingCheck" checked>
+                    <label class="form-check-label" for="activityTrackingCheck">Allow activity tracking for personalized experience</label>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <button type="button" class="btn btn-secondary me-md-2">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save Changes</button>
+        </div>
+    </form>
+</div>
 </body>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </html>
