--- a/PI/start.html
+++ b/PI/start.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="new.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="new.css">
+    
 </head>
 <body>
-  <header>
+     <header>
       <div id="nav">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" class="nav">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">RPI</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,16 +19,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../PI/index.html">Home</a>
+          <a class="nav-link" aria-current="page" href="../PI/index.html">Home</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link active" href="../PI/start.html">Start</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../PI/character.html">Characters</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../PI/commun.html">Community</a>
+        </li>
     <li class="nav-item">
           <a class="nav-link" href="../PI/settings.html">Settings</a>
         </li>
-         <li class="nav-item">
-          <a class="nav-link" href="../PI/start.html">Start</a>
+        <li class="nav-item">
+          <a class="nav-link" href="../PI/about.html">About Us</a>
         </li>
       </ul>
         <button type="button" class="btn btn-outline-dark me-3" class="login" onclick="window.location.href='../PI/cadastro.html'">Sign up</button>
